--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -2032,6 +2032,15 @@ ez-icon {
     color: var(--ez-icon-col);
 }
 
+md-icon > ez-icon {
+    color: inherit;
+}
+
+md-icon > ez-icon > svg {
+    width: 100%;
+    height: 100%;
+}
+
 ez-icon > svg {
     display: block;
     width: 1.8rem;
