--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -530,7 +530,7 @@ ez-sub-time.over-deadline ez-icon {
 }
 
 ez-grade-badge {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     padding: .5rem 1.5rem;
     border: 2px solid var(--ez-border);
